Fix positioning issue
The spinning wheels used to be too tall and look weird when they loaded,
but I fixed it.

--- a/fantasyStocks/static/style.css
+++ b/fantasyStocks/static/style.css
@@ -323,5 +323,11 @@ img.flipped {
 }
 
 .loadingPrice { 
-    width: 10%;
+    height: 0;
+}
+
+img.loadingWheel {
+    height: 1em;
+    width: auto;
+    display: inline;
 }
